Fix bug where scrollbar would break css, scrollbar is always there

--- a/css/sakura-modified.css
+++ b/css/sakura-modified.css
@@ -7,7 +7,9 @@
 html {
   border-top: 5px solid #424242;
   font-size: 62.5%;
-  font-family: serif; }
+  font-family: serif;
+  overflow: -moz-scrollbars-vertical; 
+  overflow-y: scroll; }
 
 body {
   font-size: 16px;
